# direct3d11demo

./: .gitignore  README.md
RectTexture/: RectTexture.cpp
RectTexture3D/: README.md  RectTexture.cpp
RenderShpere/: CMakeLists.txt  README.md  RectTexture.cpp  RectTexture.fx  resource.h
RenderToTexture/: README.md  RectTexture.cpp  RectTexture.fx  rendertextureclass.cpp  rendertextureclass.h
ShareTexture/: README.md
ShareTexture/CreateShareTexture/: CMakeLists.txt  RectTexture.cpp  rendertextureclass.cpp  rendertextureclass.h
ShareTexture/UseShareTexture/: RectTexture.cpp  RectTexture.fx
ShareTextureRGBAFFmpeg/: README.md
ShareTextureRGBAFFmpeg/CreateShareTexture/: CMakeLists.txt  RectTexture.cpp  RectTexture.fx  demuxing_decoding.cpp  scaling_video.cpp  scaling_video.h
ShareTextureRGBAFFmpeg/UseShareTexture/: RectTexture.fx
ShareTextureRGBAWithoutLock/CreateShareTexture/: CMakeLists.txt  RectTexture.cpp  RectTexture.fx
ShareTextureRGBAWithoutLock/UseShareTexture/: RectTexture.cpp  RectTexture.fx
ShareTextureYUV/: README.md
ShareTextureYUV/CreateShareTexture/: CMakeLists.txt  RectTexture.cpp
ShareTextureYUV/UseShareTexture/: RectTexture.cpp
ShareTextureYUVFFmpeg/: README.md
ShareTextureYUVFFmpeg/CreateShareTexture/: CMakeLists.txt  RectTexture.cpp  demuxing_decoding.h
ShareTextureYUVFFmpeg/UseShareTexture/: CMakeLists.txt  RectTexture.cpp
ShareTextureYuvWithoutLock/: README.md
ShareTextureYuvWithoutLock/CreateShareTexture/: README.md  RectTexture.cpp  RectTexture.fx
ShareTextureYuvWithoutLock/UseShareTexture/: RectTexture.cpp  Resource.rc
Tutorial 01Basics/: CMakeLists.txt
Tutorial02RenderingaTriangle/: CMakeLists.txt  Tutorial02.cpp
Tutorial03Shaders/: CMakeLists.txt  Tutorial03.cpp
Tutorial04_3DSpaces/: CMakeLists.txt  Tutorial04.cpp
Tutorial05Transformation/: CMakeLists.txt  Tutorial05.cpp
Tutorial06Lighting/: CMakeLists.txt  Tutorial06.cpp
Tutorial07TextureMapping/: CMakeLists.txt  Tutorial07.cpp
UpdateTexture/: CMakeLists.txt  README.md  RectTexture.cpp
YUVOneTexture/: CMakeLists.txt  README.md  RectTexture.cpp  RectTexture.fx
YUVTexture/: CMakeLists.txt  RectTexture.cpp  RectTexture.fx
